--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,3 @@
-
 * {
   box-sizing: border-box;
 }
@@ -34,7 +33,7 @@ header {
 }
 
 .menu a {
-  color: rgb(25, 18, 164);
+  color: #081f5c;
   text-decoration: none;
   font-size: 18px;
   padding: 0.5em 0;
@@ -42,7 +41,7 @@ header {
 
 .menu a:hover {
   text-decoration: underline;
-  color: blue;
+  color: white;
 }
 
 .menu-icon {
@@ -57,11 +56,17 @@ header {
 .menu-icon-line {
   width: 100%;
   height: 3px;
-  background-color: rgb(25, 18, 164);
+  background-color: #081f5c;
 }
 
 #menu-toggle {
   display: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  align-items: center;
 }
 
 @media (max-width: 768px) {
@@ -84,5 +89,41 @@ header {
 
   .menu-icon {
     display: flex;
+  }
+}
+
+/* .grid1_1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+  } */
+
+@media (min-width: 800px) {
+  section {
+    padding: 3em;
+  }
+
+  .grid1_1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+  }
+
+  .grid2_1-1{
+  display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+  }
+
+   .grid3_1-1{
+  display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
+  }
+
+   .grid4_1-1{
+  display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 1em;
   }
 }
