--- a/css/layout.css
+++ b/css/layout.css
@@ -102,6 +102,12 @@ img {
   section {
     padding: 3em;
   }
+  .grid_1-1-1-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1em;
+    margin-top: 5%;
+  }
 
   .grid1_1-1 {
     display: grid;
