--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,18 @@ body {
 h1 {
   color: #081f5c;
   font-size: 50px;
-  font-family: Facelio;   
-  
-  
+  font-family: Facelio;
+  /* margin: 50px; */
+}
+
+
+h2 {
+  color: #081f5c;
+  font-family: Facelio;
 }
 
 p {
-   color: #081f5c;
+  color: #081f5c;
   max-width: 55ch;
   font-family: TIMESS_;
   font-size: 20px;
@@ -60,19 +65,16 @@ p {
   opacity: 1; /* Show overlay on hover */
 }
 
-
-
 @font-face {
   font-family: "Facelio";
   src: url("../fonts/Facelio.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
-} 
+}
 
 @font-face {
   font-family: "TIMESS_";
   src: url("../fonts/TIMESS__.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
-} 
-
+}
