--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,22 @@ h1 {
   font-size: 50px;
   font-family: Facelio;
   /* margin: 50px; */
+  padding: 10px;
 }
-
 
 h2 {
   color: #081f5c;
   font-family: Facelio;
+}
+
+hr {
+  margin: 10px;
+}
+
+footer {
+  margin: 10px;
+  padding: 10px;
+  text-align: center;
 }
 
 p {
@@ -52,7 +62,7 @@ p {
 }
 
 .overlay-text {
-  color: #4d3d34;
+  color: white;
   font-size: 20px;
   text-align: center;
 }
