--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #f2f0de;
+  /* background-color: #F4DBDB; */
+  background-color: #F4DBDB
 }
 
 h1 {
@@ -38,6 +39,7 @@ ul {
   color: #081f5c;
 }
 
+
 /* hover effekt */
 .image {
   object-fit: cover;
@@ -59,7 +61,7 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(217, 208, 199, 0.75);
+  background-color: #cad4ee;
   display: flex;
   justify-content: center;
   align-items: center;
