--- a/css/layout.css
+++ b/css/layout.css
@@ -67,8 +67,8 @@ img {
   max-width: 100%;
   height: auto;
   /* align-items: center; */
-  padding: 5px;
-  margin-left: 10px;
+  padding: 10%;
+  margin-left: 10%;
 }
 
 @media (max-width: 800px) {
@@ -131,7 +131,7 @@ img {
     grid-template-columns: 1fr 1fr;
     gap: 1em;
   }
-  
+
   .grid4_1-1 {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -168,17 +168,16 @@ img {
 
 @media (min-width: 1600px) {
   section {
-    p{
+    p {
       font-size: 25px;
     }
 
-    h2{
+    h2 {
       font-size: 35px;
     }
 
-    h1{
+    h1 {
       font-size: 45px;
     }
   }
-
 }
