--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,27 @@ h1 {
   color: #081f5c;
   font-size: 50px;
   font-family: Facelio;
-  margin: 50px; 
+  margin: 50px;
   padding: 10px;
-
 }
 
+a {
+  text-decoration: underline;
+  color: #081f5c;
+  font-size: 20px;
+  font-weight: bold;
+  
+}
+
+a:hover {
+  color: white;
+  text-decoration: underline;
+}
 
 h2 {
   color: #081f5c;
   font-family: Facelio;
+  font-size: 30px;
 }
 
 hr {
@@ -35,12 +47,12 @@ p {
   font-family: TIMESS_;
   font-size: 20px;
   line-height: 1.5;
-
 }
 
 ul {
   font-family: TIMESS_;
   color: #081f5c;
+  font-size: 20px;
 }
 
 /* hover effekt */
@@ -64,7 +76,7 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #cad4eead;
+  background-color: #081e5c4a;
   display: flex;
   justify-content: center;
   align-items: center;
