--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ h1 {
   padding: 10px;
 }
 
+
+
 a {
   text-decoration: underline;
   color: #081f5c;
@@ -18,6 +20,10 @@ a {
   font-weight: bold;
   
 }
+
+/* .link-container{
+  text-align: center;
+} */
 
 a:hover {
   color: white;
@@ -30,6 +36,12 @@ h2 {
   font-size: 30px;
 }
 
+h3 {
+  color: #081f5c;
+  font-family: Facelio;
+  font-size: 25px;
+}
+
 hr {
   margin: 10px;
   color: #081f5c;
@@ -39,11 +51,13 @@ footer {
   margin: 10px;
   padding: 10px;
   text-align: center;
+  
+  
 }
 
 p {
   color: #081f5c;
-  max-width: 55ch;
+  max-width: 64ch;
   font-family: TIMESS_;
   font-size: 20px;
   line-height: 1.5;
